# codex

./: WEB_SERVER_API.md
codex-rs/: BOXLITE_SANDBOX_INTEGRATION.md  Cargo.toml
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/protocol/: v2.rs
codex-rs/cli/: build.rs
codex-rs/config/src/: config_requirements.rs  requirements_exec_policy.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: codex.rs  exec.rs  features.rs  lib.rs  safety.rs  stream_events_utils.rs  thread_manager.rs
codex-rs/core/src/agent/: role.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/config_loader/: config_requirements.rs  requirements_exec_policy.rs
codex-rs/core/src/models_manager/: manager.rs
codex-rs/core/src/rollout/: mod.rs  postgres.rs  (+1 more)
codex-rs/docs/: rollout_storage.md
codex-rs/exec-server/: build.rs
codex-rs/exec/src/: lib.rs
codex-rs/tui/src/: cli.rs  lib.rs
codex-rs/tui2/src/: lib.rs
codex-rs/web-server/: API.md  COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PERFORMANCE.md  README.md
codex-rs/web-server/src/: approval_manager.rs  attachments.rs  error.rs  event_stream.rs  lib.rs  main.rs  middleware.rs  state.rs
codex-rs/web-server/src/handlers/: approvals.rs  auth.rs  commands.rs  config.rs  feedback.rs  mcp.rs  mod.rs  models.rs  review.rs  skills.rs  threads.rs  turns.rs
codex-rs/web-server/tests/: README.md  all.rs
codex-rs/web-server/tests/common/: mod.rs
codex-rs/web-server/tests/suite/: feedback.rs  http_example.rs  mcp.rs  mod.rs  sse.rs  threads.rs
(+17 files in other folders)
