[package]
name = "codex-web-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, features = ["http1", "http2", "json", "tokio", "multipart"] }
bytes = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-core = { workspace = true, features = ["sandbox-tool"] }
codex-feedback = { workspace = true }
codex-protocol = { workspace = true }
codex-rmcp-client = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
